# rux-kernel

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  Makefile  README.md  x86_64-rux.json
.cargo/: config.toml
scripts/: grub.cfg  ldflag.rs  linker.ld
src/: kernel.rs  main.rs
src/boot/: boot.s
